# named_einsum

./: .gitignore  README.md  lint.sh  pyproject.toml  setup.cfg  setup.py
named_einsum/: __init__.py  characters.py  exceptions.py  grammar.g  jax.py  lark_parser.py  numpy.py  parser.py  torch.py  version.py
named_einsum/tests/: test_error.py  test_impl.py  test_output.py
