[metadata]
name = named_einsum
version = attr: named_einsum.__version__
long_description = file: README.md
long_description_content_type = text/markdown
author = Nicolas Nytko
author_email='nnytko2@illinois.edu',
url = https://github.com/nicknytko/named_einsum
description = Readable einsum
keywords = einsum, tensor contraction
license = MIT
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3

[options]
packages = find:
zip_safe = True
include_package_data = True
install_requires =
    numpy>=1.7.0
tests_require =
    pytest>=2